[gd_scene load_steps=2 format=3 uid="uid://rf6sp7mmnmll"]

[ext_resource type="Script" path="res://Scenes/UI/pause.gd" id="1_7y6jp"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7y6jp")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.768627)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="ButtonContinue" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="ButtonSettings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ButtonControls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="ButtonMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit To Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContinue" to="." method="_on_button_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonControls" to="." method="_on_button_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonMenu" to="." method="_on_button_menu_pressed"]
